--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
     <div class="content">
       <p>Hey Zoe! Welcome to your site</p>
+
+      <p>This page is for you, and I hope to add all the info I can about myself, from videos, to letters, to all the fun info!</p>
     </div>
 
   </body>
