new pages and video

--- a/birthdays/4years.html
+++ b/birthdays/4years.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <!-- <link rel="icon" type="image/png" href="./titleIcon.png" /> -->
-    <title>Zoe - Home</title>
+    <title>Zoe - Happy Birthday !</title>
   </head>
   <body>
     <ul>
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./blog.html">Blog</a></li>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="../blog.html">Blog</a></li>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Birthdays</a>
         <div class="dropdown-content">
@@ -32,11 +32,9 @@
     </ul>
 
     <div class="content">
-      <p>Hey Zoe! Welcome to your site</p>
-
+      <p>Happy 4th Birthday, Zoe!</p>
       <p>
-        This page is for you, and I hope to add all the info I can about myself,
-        from videos, to letters, to all the fun info!
+
       </p>
     </div>
   </body>
