styling changes and new video

--- a/blog.html
+++ b/blog.html
@@ -41,19 +41,32 @@
       to work since this is a private link) -- This won't work on firefox.
       <a href="https://youtu.be/Wfn0Q0lWpgI">Here</a>
 
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/Wfn0Q0lWpgI?si=mWEqKtGH7Aiecezl"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
+      <div class="iframe-container">
+        <iframe
+          src="https://www.youtube.com/embed/Wfn0Q0lWpgI?si=mWEqKtGH7Aiecezl"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
     </div>
 
     <div class="content">
       <p>Family History - Genealogy</p>
+
+      Direct link if this embed doesn't work (you'll have to be signed in for it
+      to work since this is a private link) -- This won't work on firefox.
+      <a href="https://www.youtube.com/watch?v=lUn1FDNqqYk">Here</a>
+      <div class="iframe-container">
+        <iframe
+          src="https://www.youtube.com/embed/lUn1FDNqqYk?si=Zm1xbnrzUMMiZyW5"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
       <p>
         I misspoke here -- Dwight Newcomb Mason I (the first) was married to
         Lillian Metz, but their son, Dwight Newcomb Mason Jr, was my grandpa,
