fixed the nav so it used js

--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./style.css" />
     <!-- <link rel="icon" type="image/png" href="./titleIcon.png" /> -->
     <title>Zoe - Blog</title>
+
   </head>
   <body>
     <ul>
@@ -12,22 +13,7 @@
       <li><a href="./blog.html">Blog</a></li>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Birthdays</a>
-        <div class="dropdown-content">
-          <a href="./birthdays/4years.html">4 years</a>
-          <a href="./birthdays/5years.html">5 years</a>
-          <a href="./birthdays/6years.html">6 years</a>
-          <a href="./birthdays/7years.html">7 years</a>
-          <a href="./birthdays/8years.html">8 years</a>
-          <a href="./birthdays/9years.html">9 years</a>
-          <a href="./birthdays/10years.html">10 years</a>
-          <a href="./birthdays/11years.html">11 years</a>
-          <a href="./birthdays/12years.html">12 years</a>
-          <a href="./birthdays/13years.html">13 years</a>
-          <a href="./birthdays/14years.html">14 years</a>
-          <a href="./birthdays/15years.html">15 years</a>
-          <a href="./birthdays/16years.html">16 years</a>
-          <a href="./birthdays/17years.html">17 years</a>
-        </div>
+        <div class="dropdown-content" id="dropdown"></div>
       </li>
     </ul>
 
@@ -79,4 +65,5 @@
       </p>
     </div>
   </body>
+  <script src="./js/functionsForRoot.js"></script>
 </html>
