added a page and fixed duplicate logic

--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,7 @@
     <ul>
       <li><a href="./index.html">Home</a></li>
       <li><a href="./blog.html">Blog</a></li>
+      <li><a href="./my-music.html">My Music</a></li>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Birthdays</a>
         <div class="dropdown-content" id="dropdown"></div>
@@ -65,5 +66,5 @@
       </p>
     </div>
   </body>
-  <script src="./js/functionsForRoot.js"></script>
+  <script src="./js/scripts.js"></script>
 </html>
