--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <!-- <link rel="icon" type="image/png" href="./titleIcon.png" /> -->
     <title>Zoe - Home</title>
   </head>
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="./index.html">Home</a></li>
       <li><a href="./blog.html">Blog</a></li>
+      <li><a href="./my-music.html">My Music</a></li>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Birthdays</a>
         <div class="dropdown-content" id="dropdown"></div>
@@ -25,5 +26,5 @@
       </p>
     </div>
   </body>
-  <script src="./js/functionsForRoot.js"></script>
+  <script src="./js/scripts.js"></script>
 </html>
