--- a/birthdays/5years.html
+++ b/birthdays/5years.html
@@ -9,7 +9,8 @@
   <body>
     <ul>
       <li><a href="../index.html">Home</a></li>
-      <li><a href="../blog.html">Blog</a></li>
+      <li><a href="../blog.html">Blog</a></li>      
+      <li><a href="../my-music.html">My Music</a></li>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Birthdays</a>
         <div class="dropdown-content" id="dropdown"></div>
@@ -21,5 +22,5 @@
       <p></p>
     </div>
   </body>
-  <script src="./functions.js"></script>
+  <script src="../js/scripts.js"></script>
 </html>
