--- a/my-music.html
+++ b/my-music.html
@@ -23,15 +23,15 @@
         interviews and stuff) -- I love music and I hope you will, too!
       </p>
 
-      <p>My Music</p>
+      <h2>My Music</h2>
 
       Here's a link to my music site:
       <a href="https://zaturnvalley.github.io/autonoir/"
         >https://zaturnvalley.github.io/autonoir/
       </a>
-      You can find my on YouTube, Spotify, Bandcamp, etc. I uploaded all of my
+     <p> You can find my on YouTube, Spotify, Bandcamp, etc. I uploaded all of my
       stuff to distrokid, so I hope you can use this money / earnings in the
-      future! Video Interview
+      future! Video Interview</p>
       <div class="iframe-container">
         <iframe
           src="https://www.youtube.com/embed/Dp7yuIg6kog?si=_rDIIuoXIFzJfo4W"
@@ -41,10 +41,10 @@
           allowfullscreen
         ></iframe>
       </div>
-
+   <p>
       Marley VHS (contains lots of family videos of myself with Buddy (golden
       retriever from my childhood) and Marley (my best friend cocker spaniel)
-      and even you and mom!)
+      and even you and mom!)</p>
       <div class="iframe-container">
         <iframe
           width="560"
@@ -59,7 +59,7 @@
     </div>
 
     <div class="content">
-      <p>Music I love</p>
+      <h2>Music I love</h2>
     </div>
   </body>
   <script src="./js/scripts.js"></script>
