added a fun color changing button

--- a/birthdays/8years.html
+++ b/birthdays/8years.html
@@ -7,7 +7,7 @@
     <title>Zoe - Happy Birthday !</title>
   </head>
   <body>
-    <ul>
+    <ul id="nav">
       <li><a href="../index.html">Home</a></li>
       <li><a href="../blog.html">Blog</a></li>
       <li><a href="../my-music.html">My Music</a></li>
@@ -20,6 +20,13 @@
     <div class="content">
       <p>Happy 8th Birthday, Zoe!</p>
       <p></p>
+    </div>
+    <div class="content">
+      <div class="button-container">
+        <button onclick="changeBackgroundColor()" id="night-button">
+          Nighttime Mode
+        </button>
+      </div>
     </div>
   </body>
   <script src="../js/scripts.js"></script>
