--- a/blog.html
+++ b/blog.html
@@ -5,10 +5,9 @@
     <link rel="stylesheet" href="./style.css" />
     <!-- <link rel="icon" type="image/png" href="./titleIcon.png" /> -->
     <title>Zoe - Blog</title>
-
   </head>
   <body>
-    <ul>
+    <ul id="nav">
       <li><a href="./index.html">Home</a></li>
       <li><a href="./blog.html">Blog</a></li>
       <li><a href="./my-music.html">My Music</a></li>
@@ -64,6 +63,13 @@
         Zach Mason - Richard Mason (Dwight Mason II and Agnes Mason (Robinson))
         - Debra Mason (Skatula) (Roman Skatula and Marty Skatula (Sabo))
       </p>
+    </div>
+    <div class="content">
+      <div class="button-container">
+        <button onclick="changeBackgroundColor()" id="night-button">
+          Nighttime Mode
+        </button>
+      </div>
     </div>
   </body>
   <script src="./js/scripts.js"></script>
