--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Zoe - Home</title>
   </head>
   <body>
-    <ul>
+    <ul id="nav">
       <li><a href="./index.html">Home</a></li>
       <li><a href="./blog.html">Blog</a></li>
       <li><a href="./my-music.html">My Music</a></li>
@@ -24,6 +24,13 @@
         This page is for you, and I hope to add all the info I can about myself,
         from videos, to letters, to all the fun info!
       </p>
+    </div>
+    <div class="content">
+      <div class="button-container">
+        <button onclick="changeBackgroundColor()" id="night-button">
+          Nighttime Mode
+        </button>
+      </div>
     </div>
   </body>
   <script src="./js/scripts.js"></script>
