--- a/my-music.html
+++ b/my-music.html
@@ -7,7 +7,7 @@
     <title>Zoe - My Music</title>
   </head>
   <body>
-    <ul>
+    <ul id="nav">
       <li><a href="./index.html">Home</a></li>
       <li><a href="./blog.html">Blog</a></li>
       <li><a href="./my-music.html">My Music</a></li>
@@ -29,9 +29,11 @@
       <a href="https://zaturnvalley.github.io/autonoir/"
         >https://zaturnvalley.github.io/autonoir/
       </a>
-     <p> You can find my on YouTube, Spotify, Bandcamp, etc. I uploaded all of my
-      stuff to distrokid, so I hope you can use this money / earnings in the
-      future! Video Interview</p>
+      <p>
+        You can find my on YouTube, Spotify, Bandcamp, etc. I uploaded all of my
+        stuff to distrokid, so I hope you can use this money / earnings in the
+        future! Video Interview
+      </p>
       <div class="iframe-container">
         <iframe
           src="https://www.youtube.com/embed/Dp7yuIg6kog?si=_rDIIuoXIFzJfo4W"
@@ -41,10 +43,11 @@
           allowfullscreen
         ></iframe>
       </div>
-   <p>
-      Marley VHS (contains lots of family videos of myself with Buddy (golden
-      retriever from my childhood) and Marley (my best friend cocker spaniel)
-      and even you and mom!)</p>
+      <p>
+        Marley VHS (contains lots of family videos of myself with Buddy (golden
+        retriever from my childhood) and Marley (my best friend cocker spaniel)
+        and even you and mom!)
+      </p>
       <div class="iframe-container">
         <iframe
           width="560"
@@ -60,6 +63,13 @@
 
     <div class="content">
       <h2>Music I love</h2>
+    </div>
+    <div class="content">
+      <div class="button-container">
+        <button onclick="changeBackgroundColor()" id="night-button">
+          Nighttime Mode
+        </button>
+      </div>
     </div>
   </body>
   <script src="./js/scripts.js"></script>
