--- a/birthdays/5years.html
+++ b/birthdays/5years.html
@@ -7,9 +7,9 @@
     <title>Zoe - Happy Birthday !</title>
   </head>
   <body>
-    <ul>
+    <ul id="nav">
       <li><a href="../index.html">Home</a></li>
-      <li><a href="../blog.html">Blog</a></li>      
+      <li><a href="../blog.html">Blog</a></li>
       <li><a href="../my-music.html">My Music</a></li>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Birthdays</a>
@@ -20,6 +20,13 @@
     <div class="content">
       <p>Happy 5th Birthday, Zoe!</p>
       <p></p>
+    </div>
+    <div class="content">
+      <div class="button-container">
+        <button onclick="changeBackgroundColor()" id="night-button">
+          Nighttime Mode
+        </button>
+      </div>
     </div>
   </body>
   <script src="../js/scripts.js"></script>
