--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <!-- <link rel="icon" type="image/png" href="./titleIcon.png" /> -->
-    <title>Zoe - Blog</title>
+    <title>Zoe - Video Blog</title>
   </head>
   <body>
     <ul id="nav">
@@ -64,6 +64,24 @@
         - Debra Mason (Skatula) (Roman Skatula and Marty Skatula (Sabo))
       </p>
     </div>
+
+    <div class="content">
+      <p>Project Goal - First Video</p>
+
+      Direct link if this embed doesn't work (you'll have to be signed in for it
+      to work since this is a private link) -- This won't work on firefox.
+      <a href="https://www.youtube.com/watch?v=QzY4Gi8Iqf4">Here</a>
+      <div class="iframe-container">
+        <iframe
+          src="https://www.youtube.com/embed/QzY4Gi8Iqf4?si=psjbZiXHDIRx80GW"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
+
     <div class="content">
       <div class="button-container">
         <button onclick="changeBackgroundColor()" id="night-button">
