--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,13 @@
   <body>
     <ul id="nav">
       <li><a href="./index.html">Home</a></li>
-      <li><a href="./blog.html">Blog</a></li>
-      <li><a href="./my-music.html">My Music</a></li>
+      <li class="dropdown">
+        <a href="javascript:void(0)" class="dropbtn">Blogs</a>
+        <div class="dropdown-content" id="blog">
+          <a href="./blog.html">Video Blog</a>
+          <a href="./my-music.html">My Music</a>
+        </div>
+      </li>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Birthdays</a>
         <div class="dropdown-content" id="dropdown"></div>
@@ -19,13 +24,14 @@
 
     <div class="content">
       <p>Here's a blog of videos that are connected to specific content</p>
+      <a href="#about-me">About Me</a>
+      <a href="#family-history">Family History - Genealogy</a>
+      <a href="#project-goal">Project Goal</a>
     </div>
 
     <div class="content">
-      <p>About me</p>
-      Direct link if this embed doesn't work (you'll have to be signed in for it
-      to work since this is a private link) -- This won't work on firefox.
-      <a href="https://youtu.be/Wfn0Q0lWpgI">Here</a>
+      <h3 id="about-me">About me</h3>
+      <p>Direct link <a href="https://youtu.be/Wfn0Q0lWpgI">Here</a></h3>
 
       <div class="iframe-container">
         <iframe
@@ -39,11 +45,9 @@
     </div>
 
     <div class="content">
-      <p>Family History - Genealogy</p>
-
-      Direct link if this embed doesn't work (you'll have to be signed in for it
-      to work since this is a private link) -- This won't work on firefox.
-      <a href="https://www.youtube.com/watch?v=lUn1FDNqqYk">Here</a>
+      <h3 id="family-history">Family History - Genealogy</h3>
+ 
+     <p>Direct link <a href="https://www.youtube.com/watch?v=lUn1FDNqqYk">Here</a></p>
       <div class="iframe-container">
         <iframe
           src="https://www.youtube.com/embed/lUn1FDNqqYk?si=Zm1xbnrzUMMiZyW5"
@@ -66,11 +70,11 @@
     </div>
 
     <div class="content">
-      <p>Project Goal - First Video</p>
+      <h3 id="project-goal">Project Goal - First Video</h3>
 
-      Direct link if this embed doesn't work (you'll have to be signed in for it
+    <p>Direct link if this embed doesn't work (you'll have to be signed in for it
       to work since this is a private link) -- This won't work on firefox.
-      <a href="https://www.youtube.com/watch?v=QzY4Gi8Iqf4">Here</a>
+      <a href="https://www.youtube.com/watch?v=QzY4Gi8Iqf4">Here</a></p>
       <div class="iframe-container">
         <iframe
           src="https://www.youtube.com/embed/QzY4Gi8Iqf4?si=psjbZiXHDIRx80GW"
