--- a/my-music.html
+++ b/my-music.html
@@ -9,8 +9,13 @@
   <body>
     <ul id="nav">
       <li><a href="./index.html">Home</a></li>
-      <li><a href="./blog.html">Blog</a></li>
-      <li><a href="./my-music.html">My Music</a></li>
+      <li class="dropdown">
+        <a href="javascript:void(0)" class="dropbtn">Blogs</a>
+        <div class="dropdown-content" id="blog">
+          <a href="./blog.html">Video Blog</a>
+          <a href="./my-music.html">My Music</a>
+        </div>
+      </li>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Birthdays</a>
         <div class="dropdown-content" id="dropdown"></div>
