birthday and music and more content videos

--- a/birthdays/4years.html
+++ b/birthdays/4years.html
@@ -24,7 +24,16 @@
 
     <div class="content">
       <p>Happy 4th Birthday, Zoe!</p>
-      <p></p>
+
+      <div class="iframe-container">
+        <iframe
+          src="https://www.youtube.com/embed/BvxjxwVx2h8?si=a8BjvPFbTBVlRc2G"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
     </div>
 
     <div class="content">
