--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,7 @@
     <div class="content">
       <p>Here's a blog of videos that are connected to specific content</p>
       <a href="#about-me">About Me</a>
+      <a href="#why-christian">Why I Am A Christian</a>
       <a href="#family-history">Family History - Genealogy</a>
       <a href="#project-goal">Project Goal</a>
     </div>
@@ -41,6 +42,14 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
         ></iframe>
+      </div>
+    </div>
+
+    <div class="content">
+      <h3 id="why-christian">Why I Am A Christian</h3>
+      <p>Direct link <a href="https://www.youtube.com/watch?v=iN2_vuxyGKA">Here</a></p>
+      <div class="iframe-container">
+        <iframe src="https://www.youtube.com/embed/iN2_vuxyGKA?si=uvVAnvjelyOMOuB7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
     </div>
 
