--- a/my-music.html
+++ b/my-music.html
@@ -55,8 +55,6 @@
       </p>
       <div class="iframe-container">
         <iframe
-          width="560"
-          height="315"
           src="https://www.youtube.com/embed/9CxD4zTGBRk?si=WkhXnMcc_MsN2Z9N"
           title="YouTube video player"
           frameborder="0"
@@ -68,6 +66,16 @@
 
     <div class="content">
       <h2>Music I love</h2>
+
+      <div class="iframe-container">
+        <iframe
+          src="https://www.youtube.com/embed/B1FNvnG5BZQ?si=C7q547WRxsAOH3Ad"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
     </div>
     <div class="content">
       <div class="button-container">
