video of zoe clips

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <!-- <link rel="icon" type="image/png" href="./titleIcon.png" /> -->
+    <link rel="icon" type="image/png" href="./titleIcon.jpg" />
     <title>Zoe - Video Blog</title>
   </head>
   <body>
@@ -26,6 +26,7 @@
       <p>Here's a blog of videos that are connected to specific content</p>
       <a href="#about-me">About Me</a>
       <a href="#why-christian">Why I Am A Christian</a>
+      <a href="#zoe-short-clips">Zoe Short Clips</a>
       <a href="#family-history">Family History - Genealogy</a>
       <a href="#project-goal">Project Goal</a>
     </div>
@@ -51,6 +52,18 @@
       <div class="iframe-container">
         <iframe src="https://www.youtube.com/embed/iN2_vuxyGKA?si=uvVAnvjelyOMOuB7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
+    </div>
+
+    <div class="content">
+      <h3 id="zoe-short-clips">Zoe Short Clips</h3>
+      <p>Direct link <a href="https://www.youtube.com/watch?v=phECX8BpXiM">Here</a></p>
+      <div class="iframe-container">
+        <iframe  src="https://www.youtube.com/embed/phECX8BpXiM?si=doeieNok3oSoAjbg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>     
+       </div>
+
+       <p>
+        The dancing segment was actually to the song "Funky Town" but YouTube made me replace it with some other non-copy-written song.
+      </p>
     </div>
 
     <div class="content">
