--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <!-- <link rel="icon" type="image/png" href="./titleIcon.png" /> -->
+    <link rel="icon" type="image/png" href="./titleIcon.jpg" />
     <title>Zoe - Home</title>
   </head>
   <body>
@@ -29,6 +29,7 @@
         This page is for you, and I hope to add all the info I can about myself,
         from videos, to letters, to all the fun info!
       </p>
+      <img class="img" src="./zoeMarley.jpg" />
     </div>
     <div class="content">
       <div class="button-container">
