--- a/my-music.html
+++ b/my-music.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <!-- <link rel="icon" type="image/png" href="./titleIcon.png" /> -->
+    <link rel="icon" type="image/png" href="./titleIcon.jpg" />
     <title>Zoe - My Music</title>
   </head>
   <body>
