--- a/birthdays/4years.html
+++ b/birthdays/4years.html
@@ -23,7 +23,7 @@
     </ul>
 
     <div class="content">
-      <p>Happy 4th Birthday, Zoe!</p>
+      <p>Happy 4th Birthday, Zoe! Here's a birthday song, a-cappella! (only voice no instruments)</p>
 
       <div class="iframe-container">
         <iframe
