--- a/birthdays/5years.html
+++ b/birthdays/5years.html
@@ -23,11 +23,11 @@
     </ul>
 
     <div class="content">
-      <p>Happy 5th Birthday, Zoe!</p>
+      <p>Happy 5th Birthday, Zoe! Here's a birthday song using my stratocaster electric guitar, with chords!</p>
 
       <div class="iframe-container">
         <iframe
-          src="https://www.youtube.com/embed/BvxjxwVx2h8?si=a8BjvPFbTBVlRc2G"
+          src="https://www.youtube.com/embed/YyyNluKkNhg?si=cF6-sXCljnh8UluH"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
