--- a/birthdays/6years.html
+++ b/birthdays/6years.html
@@ -23,11 +23,11 @@
     </ul>
 
     <div class="content">
-      <p>Happy 6th Birthday, Zoe!</p>
+      <p>Happy 6th Birthday, Zoe! Here's a birthday song using my stratocaster electric guitar, with a little solo!</p>
 
       <div class="iframe-container">
         <iframe
-          src="https://www.youtube.com/embed/BvxjxwVx2h8?si=a8BjvPFbTBVlRc2G"
+          src="https://www.youtube.com/embed/B60IRM9SYPg?si=_9OPYgYXxN3Ol3DB"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
