--- a/birthdays/7years.html
+++ b/birthdays/7years.html
@@ -23,11 +23,11 @@
     </ul>
 
     <div class="content">
-      <p>Happy 7th Birthday, Zoe!</p>
+      <p>Happy 7th Birthday, Zoe! Here's a birthday song with a bass!</p>
 
       <div class="iframe-container">
         <iframe
-          src="https://www.youtube.com/embed/BvxjxwVx2h8?si=a8BjvPFbTBVlRc2G"
+          src="https://www.youtube.com/embed/6ACmdyvmnyw?si=sE860VfXyA79J053"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
