--- a/birthdays/8years.html
+++ b/birthdays/8years.html
@@ -23,11 +23,20 @@
     </ul>
 
     <div class="content">
-      <p>Happy 8th Birthday, Zoe!</p>
+      <p>Happy 8th Birthday, Zoe! Here's a birthday song, and the second video is me playing Blackbird by the Beatles (first song I learned from my dad!)</p>
 
       <div class="iframe-container">
         <iframe
           src="https://www.youtube.com/embed/BvxjxwVx2h8?si=a8BjvPFbTBVlRc2G"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="iframe-container">
+        <iframe
+          src="https://www.youtube.com/embed/FTfVqj4dFM8?si=8FjmhkWiGMckMUe8"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
