--- a/birthdays/9years.html
+++ b/birthdays/9years.html
@@ -23,11 +23,20 @@
     </ul>
 
     <div class="content">
-      <p>Happy 9th Birthday, Zoe!</p>
+      <p>Happy 9th Birthday, Zoe! Here is a birthday video with another little fun jam video!</p>
 
       <div class="iframe-container">
         <iframe
-          src="https://www.youtube.com/embed/BvxjxwVx2h8?si=a8BjvPFbTBVlRc2G"
+          src="https://www.youtube.com/embed/YyyNluKkNhg?si=cF6-sXCljnh8UluH"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="iframe-container">
+        <iframe
+          src="https://www.youtube.com/embed/9kSlbQhthl4?si=UEfelW-tVp96885r"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
