--- a/birthdays/8years.html
+++ b/birthdays/8years.html
@@ -23,7 +23,10 @@
     </ul>
 
     <div class="content">
-      <p>Happy 8th Birthday, Zoe! Here's a birthday song, and the second video is me playing Blackbird by the Beatles (first song I learned from my dad!)</p>
+      <p>
+        Happy 8th Birthday, Zoe! Here's a birthday song, and the second video is
+        me playing Blackbird by the Beatles (first song I learned from my dad!)
+      </p>
 
       <div class="iframe-container">
         <iframe
