omitted h3 end tag not corresponding

--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
 
     <div class="content">
       <h3 id="about-me">About me</h3>
-      <p>Direct link <a href="https://youtu.be/Wfn0Q0lWpgI">Here</a></h3>
+      <p>Direct link <a href="https://youtu.be/Wfn0Q0lWpgI">Here</a></p>
 
       <div class="iframe-container">
         <iframe
@@ -48,28 +48,50 @@
 
     <div class="content">
       <h3 id="why-christian">Why I Am A Christian</h3>
-      <p>Direct link <a href="https://www.youtube.com/watch?v=iN2_vuxyGKA">Here</a></p>
+      <p>
+        Direct link
+        <a href="https://www.youtube.com/watch?v=iN2_vuxyGKA">Here</a>
+      </p>
       <div class="iframe-container">
-        <iframe src="https://www.youtube.com/embed/iN2_vuxyGKA?si=uvVAnvjelyOMOuB7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe
+          src="https://www.youtube.com/embed/iN2_vuxyGKA?si=uvVAnvjelyOMOuB7"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
       </div>
     </div>
 
     <div class="content">
       <h3 id="zoe-short-clips">Zoe Short Clips</h3>
-      <p>Direct link <a href="https://www.youtube.com/watch?v=phECX8BpXiM">Here</a></p>
+      <p>
+        Direct link
+        <a href="https://www.youtube.com/watch?v=phECX8BpXiM">Here</a>
+      </p>
       <div class="iframe-container">
-        <iframe  src="https://www.youtube.com/embed/phECX8BpXiM?si=doeieNok3oSoAjbg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>     
-       </div>
+        <iframe
+          src="https://www.youtube.com/embed/phECX8BpXiM?si=doeieNok3oSoAjbg"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
 
-       <p>
-        The dancing segment was actually to the song "Funky Town" but YouTube made me replace it with some other non-copy-written song.
+      <p>
+        The dancing segment was actually to the song "Funky Town" but YouTube
+        made me replace it with some other non-copy-written song.
       </p>
     </div>
 
     <div class="content">
       <h3 id="family-history">Family History - Genealogy</h3>
- 
-     <p>Direct link <a href="https://www.youtube.com/watch?v=lUn1FDNqqYk">Here</a></p>
+
+      <p>
+        Direct link
+        <a href="https://www.youtube.com/watch?v=lUn1FDNqqYk">Here</a>
+      </p>
       <div class="iframe-container">
         <iframe
           src="https://www.youtube.com/embed/lUn1FDNqqYk?si=Zm1xbnrzUMMiZyW5"
@@ -94,9 +116,11 @@
     <div class="content">
       <h3 id="project-goal">Project Goal - First Video</h3>
 
-    <p>Direct link if this embed doesn't work (you'll have to be signed in for it
-      to work since this is a private link) -- This won't work on firefox.
-      <a href="https://www.youtube.com/watch?v=QzY4Gi8Iqf4">Here</a></p>
+      <p>
+        Direct link if this embed doesn't work (you'll have to be signed in for
+        it to work since this is a private link) -- This won't work on firefox.
+        <a href="https://www.youtube.com/watch?v=QzY4Gi8Iqf4">Here</a>
+      </p>
       <div class="iframe-container">
         <iframe
           src="https://www.youtube.com/embed/QzY4Gi8Iqf4?si=psjbZiXHDIRx80GW"
