--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         This page is for you, and I hope to add all the info I can about myself,
         from videos, to letters, to all the fun info!
       </p>
-      <img class="img" src="./zoeMarley.jpg" />
+      <img class="img" src="./zoeMarley.jpg" alt="zoe-marley" />
     </div>
     <div class="content">
       <div class="button-container">
