--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <ul id="nav">
-      <li><a href="./index.html">Home</a></li>
+      <li><a href="./index.html" id="home">Home</a></li>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Blogs</a>
         <div class="dropdown-content" id="blog">
@@ -44,6 +44,7 @@
           allowfullscreen
         ></iframe>
       </div>
+      <a href="#home">Click for Top of Page</a>
     </div>
 
     <div class="content">
@@ -61,6 +62,7 @@
           allowfullscreen
         ></iframe>
       </div>
+      <a href="#home">Click for Top of Page</a>
     </div>
 
     <div class="content">
@@ -83,6 +85,7 @@
         The dancing segment was actually to the song "Funky Town" but YouTube
         made me replace it with some other non-copy-written song.
       </p>
+      <a href="#home">Click for Top of Page</a>
     </div>
 
     <div class="content">
@@ -111,6 +114,7 @@
         Zach Mason - Richard Mason (Dwight Mason II and Agnes Mason (Robinson))
         - Debra Mason (Skatula) (Roman Skatula and Marty Skatula (Sabo))
       </p>
+      <a href="#home">Click for Top of Page</a>
     </div>
 
     <div class="content">
@@ -130,6 +134,7 @@
           allowfullscreen
         ></iframe>
       </div>
+      <a href="#home">Click for Top of Page</a>
     </div>
 
     <div class="content">
