--- a/my-music.html
+++ b/my-music.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <ul id="nav">
-      <li><a href="./index.html">Home</a></li>
+      <li><a href="./index.html" id="home">Home</a></li>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Blogs</a>
         <div class="dropdown-content" id="blog">
@@ -62,6 +62,7 @@
           allowfullscreen
         ></iframe>
       </div>
+      <a href="#home">Click for Top of Page</a>
     </div>
 
     <div class="content">
@@ -76,6 +77,7 @@
           allowfullscreen
         ></iframe>
       </div>
+      <a href="#home">Click for Top of Page</a>
     </div>
     <div class="content">
       <div class="button-container">
