--- a/blog.html
+++ b/blog.html
@@ -27,6 +27,7 @@
       <a href="#about-me">About Me</a>
       <a href="#why-christian">Why I Am A Christian</a>
       <a href="#zoe-short-clips">Zoe Short Clips</a>
+      <a href="#travel-stories">Travel Stories</a>
       <a href="#family-history">Family History - Genealogy</a>
       <a href="#project-goal">Project Goal</a>
     </div>
@@ -85,6 +86,26 @@
         The dancing segment was actually to the song "Funky Town" but YouTube
         made me replace it with some other non-copy-written song.
       </p>
+      <a href="#home">Click for Top of Page</a>
+    </div>
+
+    <div class="content">
+      <h3 id="travel-stories">Travel Stories</h3>
+      <p>
+        Direct link
+        <a href="https://www.youtube.com/watch?v=ue2UmZaELsM">Here</a>
+      </p>
+      <div class="iframe-container">
+        <iframe
+          src="https://www.youtube.com/embed/ue2UmZaELsM?si=8FkNYw4Zc5jg7lTJ"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
+
+      <p>Stories about all the places I've traveled</p>
       <a href="#home">Click for Top of Page</a>
     </div>
 
