--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         from videos, to letters, to all the fun info!
       </p>
       <img class="img" src="./zoeMarley.jpg" alt="zoe-marley" />
+
+      <a href="https://www.youtube.com/watch?v=Wfn0Q0lWpgI&list=PLa45t0g1LQ1Il_ZSeDlkXUtByJ6YfVZA5">The Full Zoe Playlist</a>
+      <a href="https://www.youtube.com/playlist?list=PLz3GhPDC2qQ2x4VghO7XokiQcCTmQfucw">The Full Mason Family Videos Playlist (Mainly from the 1990s)</a>
     </div>
     <div class="content">
       <div class="button-container">
