--- a/my-music.html
+++ b/my-music.html
@@ -68,6 +68,10 @@
     <div class="content">
       <h2>Music I love</h2>
 
+      <p>
+        Direct link
+        <a href="https://www.youtube.com/watch?v=B1FNvnG5BZQ&feature=youtu.be">Here</a>
+      </p>
       <div class="iframe-container">
         <iframe
           src="https://www.youtube.com/embed/B1FNvnG5BZQ?si=C7q547WRxsAOH3Ad"
@@ -76,6 +80,29 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
         ></iframe>
+      </div>
+      <a href="#home">Click for Top of Page</a>
+    </div>
+
+    <div class="content">
+      <h2>Why I Play Guitar</h2>
+
+      <p>
+        Direct link
+        <a href="https://www.youtube.com/watch?v=30vi0AJZCM8">Here</a>
+      </p>
+      <div class="iframe-container">
+        <iframe
+          src="https://www.youtube.com/embed/30vi0AJZCM8?si=-NmNbjgsth1jOhHz"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+        <p>
+          About why I play guitar, the guitars I own (I didn't show my acoustic
+          though) and some basic guitar lesson basics
+        </p>
       </div>
       <a href="#home">Click for Top of Page</a>
     </div>
