--- a/birthdays/10years.html
+++ b/birthdays/10years.html
@@ -27,7 +27,7 @@
 
       <div class="iframe-container">
         <iframe
-          src="https://www.youtube.com/embed/BvxjxwVx2h8?si=a8BjvPFbTBVlRc2G"
+          src="https://www.youtube.com/embed/InlXJQ5YGFE?si=fOqfFeOs4Bw21IgY"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
