added hot takes interview

--- a/my-music.html
+++ b/my-music.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/png" href="./titleIcon.jpg" />
     <title>Zoe - My Music</title>
   </head>
+
   <body>
     <ul id="nav">
       <li><a href="./index.html" id="home">Home</a></li>
@@ -51,7 +52,9 @@
       <p>
         Marley VHS (contains lots of family videos of myself with Buddy (golden
         retriever from my childhood) and Marley (my best friend cocker spaniel)
-        and even you and mom!)
+        and even you and mom!). Lots of this footage is from Sequim Washington
+        where the Masons would hang out, and the Skatulas (my mom's side) joined
+        us from Wyoming!
       </p>
       <div class="iframe-container">
         <iframe
@@ -66,11 +69,29 @@
     </div>
 
     <div class="content">
+      <h2>Hot Takes Vaporwave Interview</h2>
+
+      <p>
+        Direct link
+        <a href="https://www.youtube.com/watch?v=VBUnQ8mjU-s">Here</a>
+      </p>
+
+      <p>
+        Here's an interview I did with the Hot Takes Vaporwave Podcast -- I talk
+        about how I got into making music, my ALS album Neuro, and future
+        projects. I was at my parents house so the internet was slow and lagged
+        sometimes but it was a really fun interview.
+      </p>
+    </div>
+
+    <div class="content">
       <h2>Music I love</h2>
 
       <p>
         Direct link
-        <a href="https://www.youtube.com/watch?v=B1FNvnG5BZQ&feature=youtu.be">Here</a>
+        <a href="https://www.youtube.com/watch?v=B1FNvnG5BZQ&feature=youtu.be"
+          >Here</a
+        >
       </p>
       <div class="iframe-container">
         <iframe
